--- a/game_login.html
+++ b/game_login.html
@@ -18,16 +18,24 @@
 		<div class="col-lg-4 col-sm-8 col-xsm-11 login_div1">
 			<h2>Player 1 login</h2>
 			<label>User Name:</label>
-			<input type="text" id="Player1" placeholder="Player 1" class="form-control">
+			<br>
+			<span>
+				<img src="User.png" class="user" style="margin-right: -3px; border-top-left-radius: 10px; border-bottom-left-radius: 10px;">
+				<input type="text" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;" id="Player1" placeholder="Player 1" class="form-control">
+			</span>
 			<br>
 		</div>
 		<div class="col-lg-4 col-sm-8 col-xsm-11 login_div2">
 			<h2>Player 2 login</h2>
 			<label>User Name:</label>
-			<input type="text" class="form-control" placeholder="Player 2" id="Player2">
+			<br>
+			<span>
+				<img src="User.png" class="user" style="margin-right: -3px; border-top-left-radius: 10px; border-bottom-left-radius: 10px;">
+				<input type="text" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;" class="form-control" placeholder="Player 2" id="Player2">
+			</span>
 			<br>
 		</div>
-		<button class="btn btn-primary" id="login_btn">Login</button>
+		<button class="btn btn-primary" onclick="nextpage()" id="login_btn">Login</button>
 	</div>
 	</center>
 </body>
