--- a/game_page.html
+++ b/game_page.html
@@ -25,6 +25,10 @@
         <input type="number" class="form-control" id="number" placeholder="Enter Multiplicand">
         <input type="number" class="form-control" id="number1" placeholder="Enter Multiplier">
         <button style="width: 30% ; margin: 20px;" id="send" class="btn btn-success" onclick="send_number()">Send Question</button>
+        <br>
+        <label style="background-color: green; color: red; display: inline-block" id="C">CORRECT!</label>
+        <br>
+        <label style="background-color: red; color: green; display: none" id="W">WRONG!</label>
     </center>
     </div>
     <script src="game_page.js"></script>
